# bvc-scraper

./: .__init__.py.kate-swp  README.md  gitignore  pyproject.toml
bvc_scraper/: __init__.py  scraper.py
examples/: quickstart.py
